--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  datetime_picker_formfield: ^2.0.0
+  intl: ^0.17.0
+  image_picker: ^0.8.4+4
 dev_dependencies:
   flutter_test:
     sdk: flutter
