--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.6
   datetime_picker_formfield: ^2.0.0
   intl: ^0.17.0
   image_picker: ^0.8.4+4
