--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
+  cloud_firestore: ^3.1.7
+  path_provider: ^2.0.8
   firebase_auth: ^3.3.6
   datetime_picker_formfield: ^2.0.0
   intl: ^0.17.0
