--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   datetime_picker_formfield: ^2.0.0
   intl: ^0.17.0
   image_picker: ^0.8.4+4
+  webview_flutter: ^3.0.4
+  flutter_webview_plugin: ^0.4.0
+  flutter_launcher_icons: ^0.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,6 +60,10 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/ic_launcher_adaptive_fore.png"
 flutter:
 
   # The following line ensures that the Material Icons font is
