--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,8 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-   assets:
-     "- assets/Free_Sample_By_Wix-removebg-preview.png"
+  assets:
+     - "assets/Free_Sample_By_Wix-removebg-preview.png"
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
