--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - "assets/Free_Sample_By_Wix-removebg-preview.png"
+     - "assets/snes.jpg"
+     - "assets/nes.jpg"
+     - "assets/gbc.jpg"
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
