--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,10 @@ flutter:
       - assets/mario.png
       - assets/login2.jpg
       - assets/nin.png
-      - "assets/Free_Sample_By_Wix-removebg-preview.png"
+      - assets/Free_Sample_By_Wix-removebg-preview.png
+      - assets/snes.jpg
+      - assets/nes.jpg
+      - assets/gbc.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
