--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,11 @@ flutter:
       - assets/mario.png
       - assets/login2.jpg
       - assets/nin.png
+      - assets/snes.jpg
+      - assets/nes.jpg
+      - assets/gbc.jpg
+      - assets/Peera.jpg
+      - assets/P.jpg
       - "assets/Free_Sample_By_Wix-removebg-preview.png"
   #   - images/a_dot_ham.jpeg
 
