--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
       - assets/gbc.jpg
       - assets/Peera.jpg
       - assets/P.jpg
+      - assets/payupat.jpg
       - "assets/Free_Sample_By_Wix-removebg-preview.png"
   #   - images/a_dot_ham.jpeg
 
