--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
       - assets/Peera.jpg
       - assets/P.jpg
       - assets/payupat.jpg
+      - assets/bg.png
       - "assets/Free_Sample_By_Wix-removebg-preview.png"
   #   - images/a_dot_ham.jpeg
 
