--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,9 @@ flutter:
       - assets/Peera.jpg
       - assets/P.jpg     
       - assets/payupat.jpg
+      - assets/snesbg.png
+      - assets/nesbg.png
+      - assets/gbcbg.png
 #//<<<<<<< HEAD
       - assets/bg.png
       - "assets/Free_Sample_By_Wix-removebg-preview.png"
