--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
       - assets/P.jpg     
       - assets/payupat.jpg
       - assets/bg.png
+      - assets/6.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
